--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover, interactive-widget=resizes-content">
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="style.css">
   <title>QR_Scan</title>
@@ -94,5 +94,6 @@
 <script src="app.js"></script>
 </body>
 </html>
+
 
 
